// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing _classicalControlled No htmlClass 1`] = `
"<g class=\\"classically-controlled-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"120\\" y1=\\"180\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"95\\" y1=\\"175\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled\\" onClick=\\"toggleClassicalBtn('classically-controlled')\\">
<circle class=\\"classically-controlled\\" cx=\\"95\\" cy=\\"160\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"95\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-zero hidden\\">
</g>
<g class=\\"classically-controlled-one\\">
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"90\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"110\\" y=\\"40\\">X</text>
</g></g>
<rect class=\\"classical-container\\" x=\\"120\\" y=\\"5\\" width=\\"80\\" height=\\"130\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g>"
`;

exports[`Testing _classicalControlled change padding 1`] = `
"<g class=\\"classically-controlled-1-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"120\\" y1=\\"180\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"95\\" y1=\\"175\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled-1\\" onClick=\\"toggleClassicalBtn('classically-controlled-1')\\">
<circle class=\\"classically-controlled-1\\" cx=\\"95\\" cy=\\"160\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled-1 classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"95\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-1-zero hidden\\">
</g>
<g class=\\"classically-controlled-1-one\\">
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"90\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"110\\" y=\\"40\\">X</text>
</g></g>
<rect class=\\"classical-container\\" x=\\"115\\" y=\\"0\\" width=\\"90\\" height=\\"140\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g>"
`;

exports[`Testing _classicalControlled multiple 'zero'/'one' children 1`] = `
"<g class=\\"classically-controlled-1-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"120\\" y1=\\"180\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"95\\" y1=\\"175\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled-1\\" onClick=\\"toggleClassicalBtn('classically-controlled-1')\\">
<circle class=\\"classically-controlled-1\\" cx=\\"95\\" cy=\\"160\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled-1 classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"95\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-1-zero hidden\\">
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"90\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"110\\" y=\\"40\\">X</text>
</g></g>
<g class=\\"classically-controlled-1-one\\">
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"90\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"110\\" y=\\"40\\">X</text>
</g>
<g class=\\"gate\\">
<line x1=\\"170\\" x2=\\"170\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"170\\" cy=\\"100\\" r=\\"5\\"></circle>
<circle class=\\"oplus\\" cx=\\"170\\" cy=\\"40\\" r=\\"15\\"></circle>
<line x1=\\"170\\" x2=\\"170\\" y1=\\"25\\" y2=\\"55\\"></line>
<line x1=\\"155\\" x2=\\"185\\" y1=\\"40\\" y2=\\"40\\"></line>
</g></g>
<rect class=\\"classical-container\\" x=\\"120\\" y=\\"5\\" width=\\"80\\" height=\\"130\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g>"
`;

exports[`Testing _classicalControlled nested children 1`] = `
"<g class=\\"classically-controlled-1-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"120\\" y1=\\"180\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"95\\" y1=\\"175\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled-1\\" onClick=\\"toggleClassicalBtn('classically-controlled-1')\\">
<circle class=\\"classically-controlled-1\\" cx=\\"95\\" cy=\\"160\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled-1 classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"95\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-1-zero hidden\\">
</g>
<g class=\\"classically-controlled-1-one\\">
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"90\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"110\\" y=\\"40\\">X</text>
</g>
<g class=\\"classically-controlled-1-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"165\\" x2=\\"190\\" y1=\\"240\\" y2=\\"240\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"165\\" x2=\\"165\\" y1=\\"235\\" y2=\\"240\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled-1\\" onClick=\\"toggleClassicalBtn('classically-controlled-1')\\">
<circle class=\\"classically-controlled-1\\" cx=\\"165\\" cy=\\"220\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled-1 classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"165\\" y=\\"220\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-1-zero hidden\\">
</g>
<g class=\\"classically-controlled-1-one\\">
<g class=\\"gate\\">
<line x1=\\"180\\" x2=\\"180\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"180\\" cy=\\"100\\" r=\\"5\\"></circle>
<circle class=\\"oplus\\" cx=\\"180\\" cy=\\"40\\" r=\\"15\\"></circle>
<line x1=\\"180\\" x2=\\"180\\" y1=\\"25\\" y2=\\"55\\"></line>
<line x1=\\"165\\" x2=\\"195\\" y1=\\"40\\" y2=\\"40\\"></line>
</g></g>
<rect class=\\"classical-container\\" x=\\"190\\" y=\\"5\\" width=\\"20\\" height=\\"130\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g></g>
<rect class=\\"classical-container\\" x=\\"120\\" y=\\"5\\" width=\\"100\\" height=\\"130\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g>"
`;

exports[`Testing _classicalControlled one 'one' child 1`] = `
"<g class=\\"classically-controlled-1-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"120\\" y1=\\"180\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"95\\" y1=\\"175\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled-1\\" onClick=\\"toggleClassicalBtn('classically-controlled-1')\\">
<circle class=\\"classically-controlled-1\\" cx=\\"95\\" cy=\\"160\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled-1 classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"95\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-1-zero hidden\\">
</g>
<g class=\\"classically-controlled-1-one\\">
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"90\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"110\\" y=\\"40\\">X</text>
</g></g>
<rect class=\\"classical-container\\" x=\\"120\\" y=\\"5\\" width=\\"20\\" height=\\"130\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g>"
`;

exports[`Testing _classicalControlled one 'zero' child 1`] = `
"<g class=\\"classically-controlled-1-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"120\\" y1=\\"180\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"95\\" y1=\\"175\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled-1\\" onClick=\\"toggleClassicalBtn('classically-controlled-1')\\">
<circle class=\\"classically-controlled-1\\" cx=\\"95\\" cy=\\"160\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled-1 classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"95\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-1-zero hidden\\">
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"90\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"110\\" y=\\"40\\">X</text>
</g></g>
<g class=\\"classically-controlled-1-one\\">
</g>
<rect class=\\"classical-container\\" x=\\"120\\" y=\\"5\\" width=\\"20\\" height=\\"130\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g>"
`;

exports[`Testing _controlledGate CNOT gate 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<circle class=\\"oplus\\" cx=\\"80\\" cy=\\"100\\" r=\\"15\\"></circle>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"85\\" y2=\\"115\\"></line>
<line x1=\\"65\\" x2=\\"95\\" y1=\\"100\\" y2=\\"100\\"></line>
</g>"
`;

exports[`Testing _controlledGate CNOT gate 2`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<circle class=\\"oplus\\" cx=\\"80\\" cy=\\"40\\" r=\\"15\\"></circle>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"25\\" y2=\\"55\\"></line>
<line x1=\\"65\\" x2=\\"95\\" y1=\\"40\\" y2=\\"40\\"></line>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 1 control + 1 target 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"80\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"100\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 1 control + 1 target 2`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"20\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 1 control + 2 targets 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"160\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"20\\" width=\\"45\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"70\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 1 control + 2 targets 2`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"80\\" width=\\"45\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"130\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 1 control + 2 targets 3`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"20\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">Foo</text>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"140\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"160\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 2 controls + 2 targets 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"220\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"160\\" r=\\"5\\"></circle>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"220\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"20\\" width=\\"45\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"70\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 2 controls + 2 targets 2`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"220\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"140\\" width=\\"45\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"190\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 2 controls + 2 targets 3`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"220\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"160\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"20\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">Foo</text>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"200\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"220\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with 2 controls + 2 targets 4`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"220\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"220\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"20\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">Foo</text>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"140\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"160\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with multiple controls + 1 target 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"140\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"160\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with multiple controls + 1 target 2`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"160\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"20\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate Controlled U gate with multiple controls + 1 target 3`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"160\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"57.5\\" y=\\"80\\" width=\\"45\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"100\\">Foo</text>
</g>"
`;

exports[`Testing _controlledGate SWAP gate 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"92\\" y2=\\"108\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"108\\" y2=\\"92\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"152\\" y2=\\"168\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"168\\" y2=\\"152\\"></line>
</g>"
`;

exports[`Testing _controlledGate SWAP gate 2`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"160\\" r=\\"5\\"></circle>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"32\\" y2=\\"48\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"48\\" y2=\\"32\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"92\\" y2=\\"108\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"108\\" y2=\\"92\\"></line>
</g>"
`;

exports[`Testing _controlledGate SWAP gate 3`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"32\\" y2=\\"48\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"48\\" y2=\\"32\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"152\\" y2=\\"168\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"168\\" y2=\\"152\\"></line>
</g>"
`;

exports[`Testing _formatGate CNOT gate 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<circle class=\\"oplus\\" cx=\\"80\\" cy=\\"100\\" r=\\"15\\"></circle>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"85\\" y2=\\"115\\"></line>
<line x1=\\"65\\" x2=\\"95\\" y1=\\"100\\" y2=\\"100\\"></line>
</g>"
`;

exports[`Testing _formatGate classically controlled gate 1`] = `
"<g class=\\"classically-controlled-group classically-controlled-unknown\\">
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"120\\" y1=\\"180\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<line class=\\"classical-line\\" x1=\\"95\\" x2=\\"95\\" y1=\\"175\\" y2=\\"180\\" stroke-dasharray=\\"8, 8\\"></line>
<g class=\\"classically-controlled-btn classically-controlled\\" onClick=\\"toggleClassicalBtn('classically-controlled')\\">
<circle class=\\"classically-controlled\\" cx=\\"95\\" cy=\\"160\\" r=\\"15\\" stroke=\\"black\\" stroke-width=\\"1\\"></circle>
<text class=\\"classically-controlled classically-controlled-text\\" font-size=\\"14\\" font-family=\\"Arial\\" x=\\"95\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"middle\\" fill=\\"black\\">?</text>
</g>
<g class=\\"classically-controlled-zero hidden\\">
</g>
<g class=\\"classically-controlled-one\\">
</g>
<rect class=\\"classical-container\\" x=\\"120\\" y=\\"5\\" width=\\"0\\" height=\\"130\\" fill-opacity=\\"0\\" stroke-dasharray=\\"8, 8\\"></rect>
</g>"
`;

exports[`Testing _formatGate controlled swap gate 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"92\\" y2=\\"108\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"108\\" y2=\\"92\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"152\\" y2=\\"168\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"168\\" y2=\\"152\\"></line>
</g>"
`;

exports[`Testing _formatGate controlled unitary gate 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"80\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"100\\">U</text>
</g>"
`;

exports[`Testing _formatGate controlled unitary gate with arguments 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"41.5\\" y=\\"80\\" width=\\"77\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"93\\">U</text>
<text font-size=\\"12\\" x=\\"80\\" y=\\"108\\">('foo', 'bar')</text>
</g>"
`;

exports[`Testing _formatGate measure gate 1`] = `
"<g class=\\"gate\\">
<rect class=\\"gate-measure\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<path class=\\"arc-measure\\" d=\\"M 95 42 A 15 12 0 0 0 65 42\\"></path>
<line x1=\\"80\\" x2=\\"92\\" y1=\\"48\\" y2=\\"28\\"></line>
</g>"
`;

exports[`Testing _formatGate multi-qubit unitary gate 1`] = `
"<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"70\\">U</text>
</g>"
`;

exports[`Testing _formatGate multi-qubit unitary gate with arguments 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<rect class=\\"gate-unitary\\" x=\\"41.5\\" y=\\"20\\" width=\\"77\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"63\\">U</text>
<text font-size=\\"12\\" x=\\"80\\" y=\\"78\\">('foo', 'bar')</text>
</g>"
`;

exports[`Testing _formatGate single-qubit unitary gate 1`] = `
"<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">H</text>
</g>"
`;

exports[`Testing _formatGate single-qubit unitary gate with arguments 1`] = `
"<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"54\\" y=\\"20\\" width=\\"52\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"33\\">Ry</text>
<text font-size=\\"12\\" x=\\"80\\" y=\\"48\\">(0.25)</text>
</g>"
`;

exports[`Testing _formatGate swap gate 1`] = `
"<g class=\\"gate\\">
<line x1=\\"72\\" x2=\\"88\\" y1=\\"32\\" y2=\\"48\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"48\\" y2=\\"32\\"></line>,<line x1=\\"72\\" x2=\\"88\\" y1=\\"92\\" y2=\\"108\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"108\\" y2=\\"92\\"></line>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
</g>"
`;

exports[`Testing _measure 1 qubit + 1 classical registers 1`] = `
"<rect class=\\"gate-measure\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<path class=\\"arc-measure\\" d=\\"M 95 42 A 15 12 0 0 0 65 42\\"></path>
<line x1=\\"80\\" x2=\\"92\\" y1=\\"48\\" y2=\\"28\\"></line>"
`;

exports[`Testing _measure 2 qubit + 1 classical registers 1`] = `
"<rect class=\\"gate-measure\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<path class=\\"arc-measure\\" d=\\"M 95 42 A 15 12 0 0 0 65 42\\"></path>
<line x1=\\"80\\" x2=\\"92\\" y1=\\"48\\" y2=\\"28\\"></line>"
`;

exports[`Testing _measure 2 qubit + 2 classical registers 1`] = `
"<rect class=\\"gate-measure\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<path class=\\"arc-measure\\" d=\\"M 95 42 A 15 12 0 0 0 65 42\\"></path>
<line x1=\\"80\\" x2=\\"92\\" y1=\\"48\\" y2=\\"28\\"></line>"
`;

exports[`Testing _measure 2 qubit + 2 classical registers 2`] = `
"<rect class=\\"gate-measure\\" x=\\"60\\" y=\\"80\\" width=\\"40\\" height=\\"40\\"></rect>
<path class=\\"arc-measure\\" d=\\"M 95 102 A 15 12 0 0 0 65 102\\"></path>
<line x1=\\"80\\" x2=\\"92\\" y1=\\"108\\" y2=\\"88\\"></line>"
`;

exports[`Testing _swap Adjacent swap 1`] = `
"<line x1=\\"72\\" x2=\\"88\\" y1=\\"32\\" y2=\\"48\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"48\\" y2=\\"32\\"></line>,<line x1=\\"72\\" x2=\\"88\\" y1=\\"92\\" y2=\\"108\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"108\\" y2=\\"92\\"></line>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>"
`;

exports[`Testing _swap Adjacent swap 2`] = `
"<line x1=\\"72\\" x2=\\"88\\" y1=\\"92\\" y2=\\"108\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"108\\" y2=\\"92\\"></line>,<line x1=\\"72\\" x2=\\"88\\" y1=\\"32\\" y2=\\"48\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"48\\" y2=\\"32\\"></line>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"100\\" y2=\\"40\\"></line>"
`;

exports[`Testing _swap Non-adjacent swap 1`] = `
"<line x1=\\"72\\" x2=\\"88\\" y1=\\"32\\" y2=\\"48\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"48\\" y2=\\"32\\"></line>,<line x1=\\"72\\" x2=\\"88\\" y1=\\"152\\" y2=\\"168\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"168\\" y2=\\"152\\"></line>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\"></line>"
`;

exports[`Testing _swap Non-adjacent swap 2`] = `
"<line x1=\\"72\\" x2=\\"88\\" y1=\\"152\\" y2=\\"168\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"168\\" y2=\\"152\\"></line>,<line x1=\\"72\\" x2=\\"88\\" y1=\\"32\\" y2=\\"48\\"></line>
<line x1=\\"72\\" x2=\\"88\\" y1=\\"48\\" y2=\\"32\\"></line>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"160\\" y2=\\"40\\"></line>"
`;

exports[`Testing _unitary Multiqubit unitary on consecutive registers 1`] = `
"<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"70\\">ZZ</text>"
`;

exports[`Testing _unitary Multiqubit unitary on consecutive registers 2`] = `
"<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"160\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"100\\">ZZZ</text>"
`;

exports[`Testing _unitary Multiqubit unitary on non-consecutive registers 1`] = `
"<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"160\\" stroke-dasharray=\\"8, 8\\"></line>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">ZZ</text>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"140\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"160\\">ZZ</text>"
`;

exports[`Testing _unitary Multiqubit unitary on non-consecutive registers 2`] = `
"<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"220\\" stroke-dasharray=\\"8, 8\\"></line>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">ZZZ</text>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"140\\" width=\\"40\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"190\\">ZZZ</text>"
`;

exports[`Testing _unitary Multiqubit unitary on non-consecutive registers 3`] = `
"<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">ZZ</text>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"140\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"160\\">ZZ</text>"
`;

exports[`Testing _unitary Multiqubit unitary on non-consecutive registers 4`] = `
"<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">ZZZ</text>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"140\\" width=\\"40\\" height=\\"100\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"190\\">ZZZ</text>"
`;

exports[`Testing _unitary Single qubit unitary 1`] = `
"<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"40\\">H</text>"
`;

exports[`Testing formatGates Multiple gates 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<circle class=\\"oplus\\" cx=\\"80\\" cy=\\"40\\" r=\\"15\\"></circle>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"25\\" y2=\\"55\\"></line>
<line x1=\\"65\\" x2=\\"95\\" y1=\\"40\\" y2=\\"40\\"></line>
</g>
<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"100\\" y2=\\"160\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"100\\" r=\\"5\\"></circle>
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"140\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"160\\">X</text>
</g>
<g class=\\"gate\\">
<rect class=\\"gate-unitary\\" x=\\"60\\" y=\\"140\\" width=\\"40\\" height=\\"40\\"></rect>
<text font-size=\\"14\\" x=\\"80\\" y=\\"160\\">X</text>
</g>
<g class=\\"gate\\">
<rect class=\\"gate-measure\\" x=\\"60\\" y=\\"20\\" width=\\"40\\" height=\\"40\\"></rect>
<path class=\\"arc-measure\\" d=\\"M 95 42 A 15 12 0 0 0 65 42\\"></path>
<line x1=\\"80\\" x2=\\"92\\" y1=\\"48\\" y2=\\"28\\"></line>
</g>"
`;

exports[`Testing formatGates Single gate 1`] = `
"<g class=\\"gate\\">
<line x1=\\"80\\" x2=\\"80\\" y1=\\"40\\" y2=\\"100\\"></line>
<circle class=\\"control-dot\\" cx=\\"80\\" cy=\\"40\\" r=\\"5\\"></circle>
<circle class=\\"oplus\\" cx=\\"80\\" cy=\\"100\\" r=\\"15\\"></circle>
<line x1=\\"80\\" x2=\\"80\\" y1=\\"85\\" y2=\\"115\\"></line>
<line x1=\\"65\\" x2=\\"95\\" y1=\\"100\\" y2=\\"100\\"></line>
</g>"
`;
